# CppND-Capstone-MandelBrot

./: CMakeLists.txt  README.md  README.odt  README.txt
MandelBrot/: MandelBrot.cpp  MandelBrot.h  MessageQueue.h  Render.cpp  Render.h  main.cpp
data/: help.txt
